[project]
name = "vbb-transport-homeassistant"
version = "0.1.0"
description = "Home Assistant HACS integration for v6.vbb.transport.rest (Berlin/Brandenburg public transport departures)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "vbb-transport-homeassistant contributors" },
]
dependencies = [
    "aiohttp>=3.9",
]

[dependency-groups]
dev = [
    "homeassistant>=2024.10.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-homeassistant-custom-component>=0.13",
    "ruff>=0.6",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "PL", "RUF"]
ignore = ["PLR0913"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
